*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9076 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -256,7 +256,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=خيار لنسخ المحتوى المختا
 foxtrick.ContextMenuCopy.Table.desc=خيار لنسخ الجدول بلغة HT-ML
 foxtrick.NewMail.desc=تظليل عداد الرسائل الجديدة وردود المنتدى الجديدة
 foxtrick.NewMail.NotifyMail.desc=إظهار تنبيه في حالة وجود رسائل بريدية جديدة
+foxtrick.NewMail.NotifyMailSound.desc=تنبيه صوتي للبريد
 foxtrick.NewMail.NotifyForum.desc=إظهار تنبيه في حالة وجود ردود جديدة في المنتدى
+foxtrick.NewMail.NotifyForumSound.desc=تنبيه صوتي للمنتدى
 foxtrick.CopyYouth.desc=خاصية النسخ للتقارير التدريبية الخاصة بأكاديمية الشباب
 foxtrick.CopyYouth.TrainingReport.desc=التقرير التدريبي
 foxtrick.CopyYouth.ScoutComment.desc=تعليق الكشاف
@@ -379,6 +381,7 @@ foxtrick.Filter.desc=يضيف عوامل التصفية لصفحة كبار ال
 foxtrick.RatingsDisplay.desc=عرض متوسط التقييمات بأسلوب مختلف
 foxtrick.RatingsDisplay.DenominationsRange.desc=في نطاق فئات 0-20
 foxtrick.RatingsDisplay.HatStats.desc=كما HatStats
+foxtrick.SafeForWork.desc=يقوم باستبدال الأيقونة وعناوين التبويب في هاتريك. تأكد من إطفاء كل الوحدات النمطية الأخرى التي قد تكون خطيرة خاصة تلك المتخصصة بالتنبيه.
 
 # -----------------------------------------------------------------------------
 
@@ -386,6 +389,8 @@ foxtrick.RatingsDisplay.HatStats.desc=كما HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+SafeForWork.title=العنوان
+SafeForWork.icon=الأيقونة
 
 #Embed Media
 EmbedMedia.EmbeddedImage=الصورة المضمنة
@@ -398,6 +403,7 @@ ExtraShortcuts.prefs=التفضيلات
 ExtraShortcuts.ftprefs=تفضيلات FoxTrick
 
 #lineupShortcut
+LineupShortcut.lineup=التشكيلة
 
 
 #HistoryStats
@@ -572,6 +578,7 @@ matchOrder.options=خيارات
 matchOrder.staminaDiscount=تخفيض اللياقة البدنية
 matchOrder.staminaDiscount.title=يتم تخفيض تقييمات الخطوط اعتمادا على مساهمة اللاعبين في كل خط
 matchOrder.summary=ملخص
+matchOrder.tournamentMatch=مباراة بطولة
 
 #Skills
 Playmaking=صناعة اللعب
@@ -1092,6 +1099,10 @@ TickerAlert.sound=صوت
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=تعطيل مؤقت
+toolbar.featureHighlight=تظليل الميزات
+toolbar.translationKeys=إظهار مفاتيح الترجمة
+toolbar.preferences=التفضيلات
 status.active=مفعل
 status.enabled=يعمل ولكن غير مفعل في %s
 status.disabled=معطل
@@ -1151,6 +1162,9 @@ prefs.loadSave.import.notice=قم بنسخ تفضيلاتك المخزنة في 
 prefs.additional.title=خيارات إضافية
 prefs.additional.xmlLoad=تحميل ملفات إضافية من هاتريك
 prefs.additional.smallCopyIcons=إظهار أزرار النسخ في العنوان بدلا من القضيب
+prefs.additional.anstoss2Icons=إستخدام أيقونات Anstoss2 للتخصصات
+prefs.additional.featureHighlight=تظليل سمات FoxTrick
+prefs.additional.translationKeys=إظهار مفاتيح الترجمة بدلاً من الترجمات
 prefs.additional.HTMLDebugLog=إظهار سجل البرنامج في أسفل الصفحة
 
 prefs.feedback.saved=تم حفظ التفضيلات\!
@@ -1170,6 +1184,7 @@ link.recentChanges=التغييرات الأخيرة
 
 releaseNotes.show=إظهار ملاحظات الإصدارات بعد تحديث FoxTrick
 releaseNotes.showFor=إظهار ملاحظات الإصدارات في\:
+releaseNotes.version=الإصدار\:
 
 about.copyright=حقوق النشر
 about.maintainers=فريق العمل
