--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -404,6 +404,7 @@ ExtraShortcuts.prefs=Postavke
 ExtraShortcuts.ftprefs=FoxTrickove postavke
 
 #lineupShortcut
+LineupShortcut.lineup=Postava
 
 
 #HistoryStats
