--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -15,53 +15,53 @@
 pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
-# WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
+# WARNING: your module description has to have the name module.MODULE_NAME.desc
 #AttVsDef
 #Ratings
-foxtrick.Ratings.HatStats.desc=HatStats
-foxtrick.Ratings.LoddarStats.desc=LoddarStats
-foxtrick.Ratings.PeasoStats.desc=PeasoStats
-foxtrick.Ratings.VnukStats.desc=VnukStats
-foxtrick.Ratings.HTitaVal.desc=HTitaVal
-foxtrick.Ratings.GardierStats.desc=GardierStats
+module.Ratings.HatStats.desc=HatStats
+module.Ratings.LoddarStats.desc=LoddarStats
+module.Ratings.PeasoStats.desc=PeasoStats
+module.Ratings.VnukStats.desc=VnukStats
+module.Ratings.HTitaVal.desc=HTitaVal
+module.Ratings.GardierStats.desc=GardierStats
 #MedianTransferPrice
 #ForumYouthIcons
 #FormatPostingText
 #EmbedMedia
 #Forum direct page links
 #
-foxtrick.LinksTeam.desc=Lisa mõned viidad meeskonna lehele
-foxtrick.LinksCountry.desc=Lisa mõned viidad riigi lehele
-foxtrick.LinksChallenges.desc=Lisa mõned viidad väljakutsete lehele
+module.LinksTeam.desc=Lisa mõned viidad meeskonna lehele
+module.LinksCountry.desc=Lisa mõned viidad riigi lehele
+module.LinksChallenges.desc=Lisa mõned viidad väljakutsete lehele
 # please translate next lines again if needed
-foxtrick.TeamStats.Speciality.desc=Erioskus
-foxtrick.TeamStats.Personality.desc=Iseloom
-foxtrick.SeniorTeamShortCuts.AllPages.desc=Kuva kõigil lehtedel
+module.TeamStats.Speciality.desc=Erioskus
+module.TeamStats.Personality.desc=Iseloom
+module.SeniorTeamShortCuts.AllPages.desc=Kuva kõigil lehtedel
 #ExtendedPlayerDetails
-foxtrick.SimplePresentation.HideAchievementsIcons.desc=Peidab saavutuste lehel ikoonid
-foxtrick.SimplePresentation.NoLogo.desc=Peidab meeskonna logod
+module.SimplePresentation.HideAchievementsIcons.desc=Peidab saavutuste lehel ikoonid
+module.SimplePresentation.NoLogo.desc=Peidab meeskonna logod
 #ExtraShortcuts
-foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
-foxtrick.ExtraShortcuts.No9.desc=No9 Radio
-foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
-foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+module.ExtraShortcuts.HtRadio.desc=HtRadio
+module.ExtraShortcuts.No9.desc=No9 Radio
+module.ExtraShortcuts.Latehome.desc=Latehome Radio
+module.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
 #MoveManagerOnline
-foxtrick.TeamPopupLinks.Matches.desc=Mängud
-foxtrick.TeamPopupLinks.Players.desc=Mängijad
-foxtrick.TeamPopupLinks.last_5_ips.desc=5 viimast sisselogimist
-foxtrick.TeamPopupLinks.Guestbook.desc=Külalisteraamat
-foxtrick.TeamPopupLinks.Challenge.desc=Kutsu välja
-foxtrick.TeamPopupLinks.Achievements.desc=Saavutused
-foxtrick.TeamPopupLinks.TransferHistory.desc=Üleminekute ajalugu
-foxtrick.TeamPopupLinks.TeamHistory.desc=Klubi ajalugu
-foxtrick.TeamPopupLinks.LastLineup.desc=Viimase mängu rivistus
-foxtrick.TeamPopupLinks.NextMatch.desc=Saada HT-mail
-foxtrick.TeamPopupLinks.Coach.desc=Treener
+module.TeamPopupLinks.Matches.desc=Mängud
+module.TeamPopupLinks.Players.desc=Mängijad
+module.TeamPopupLinks.last_5_ips.desc=5 viimast sisselogimist
+module.TeamPopupLinks.Guestbook.desc=Külalisteraamat
+module.TeamPopupLinks.Challenge.desc=Kutsu välja
+module.TeamPopupLinks.Achievements.desc=Saavutused
+module.TeamPopupLinks.TransferHistory.desc=Üleminekute ajalugu
+module.TeamPopupLinks.TeamHistory.desc=Klubi ajalugu
+module.TeamPopupLinks.LastLineup.desc=Viimase mängu rivistus
+module.TeamPopupLinks.NextMatch.desc=Saada HT-mail
+module.TeamPopupLinks.Coach.desc=Treener
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
-foxtrick.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
+module.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 
 # -----------------------------------------------------------------------------
 
