*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9080 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -15,7 +15,7 @@ direction=ltr
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
 
 # Module descriptions
-# WARNING: your module description has to have the name module.MODULE_NAME.desc
+# WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 #AttVsDef
 #Ratings
 #MedianTransferPrice
