--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -16,73 +16,73 @@ properties.translators=Izstrādātāji
 pluralFormRuleID=pluralFormRule3
 
 # Module descriptions
-# WARNING: your module description has to have the name module.MODULE_NAME.desc
+# WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 #AttVsDef
 #Ratings
-module.Ratings.HideAverages.desc=Paslēpt vidējo vērtējumu
-module.Ratings.HatStats.desc=HatStats
-module.Ratings.HatStatsDetailed.desc=HatStats (detalizēti)
-module.Ratings.LoddarStats.desc=LoddarStats
-module.Ratings.PeasoStats.desc=PeasoStats
-module.Ratings.VnukStats.desc=VnukStats
-module.Ratings.HTitaVal.desc=HTitaVal
-module.Ratings.GardierStats.desc=GardierStats
+foxtrick.Ratings.HideAverages.desc=Paslēpt vidējo vērtējumu
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detalizēti)
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 #MedianTransferPrice
-module.TeamPopupLinks.desc=Parāda nelielu izlecošo logu ar ātrajām saitēm, uzejot ar kursoru uz teamid saites
+foxtrick.TeamPopupLinks.desc=Parāda nelielu izlecošo logu ar ātrajām saitēm, uzejot ar kursoru uz teamid saites
 #ForumYouthIcons
 #FormatPostingText
 #EmbedMedia
 #Forum direct page links
 #
 # please translate next lines again if needed
-module.ConfirmActions.Bid.desc=Solīt par spēlētāju
-module.TeamStats.General.desc=Vispārēja informācija (TSI/vecums)
-module.TeamStats.Speciality.desc=Specialitāte
-module.TeamStats.Personality.desc=Personība
-module.TeamStats.Status.desc=Statuss (kartītes/savainojumi)
-module.TeamStats.Current_league.desc=Pašreizējā līga
-module.CopyPlayerAd.Sorted.desc=Kārtot prasmes dilstošā secībā.
+foxtrick.ConfirmActions.Bid.desc=Solīt par spēlētāju
+foxtrick.TeamStats.General.desc=Vispārēja informācija (TSI/vecums)
+foxtrick.TeamStats.Speciality.desc=Specialitāte
+foxtrick.TeamStats.Personality.desc=Personība
+foxtrick.TeamStats.Status.desc=Statuss (kartītes/savainojumi)
+foxtrick.TeamStats.Current_league.desc=Pašreizējā līga
+foxtrick.CopyPlayerAd.Sorted.desc=Kārtot prasmes dilstošā secībā.
 #ExtendedPlayerDetails
-module.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rādīt algu bez piemaksas
-module.ExtendedPlayerDetailsWage.SeasonWage.desc=Rādīt sezonas algu
-module.SimplePresentation.League_Table.desc=Pievienot vertikālu līniju līgas tabulā, atvieglojot lasīšanu
+foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rādīt algu bez piemaksas
+foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Rādīt sezonas algu
+foxtrick.SimplePresentation.League_Table.desc=Pievienot vertikālu līniju līgas tabulā, atvieglojot lasīšanu
 #ExtraShortcuts
-module.ExtraShortcuts.ManageCHPP.desc=Saite uz CHPP uzstādījumu lapu
-module.ExtraShortcuts.FoxTrickPrefs.desc=Saite uz FoxTrick uzstādījumu lapu
-module.ExtraShortcuts.HtRadio.desc=HtRadio
-module.ExtraShortcuts.No9.desc=No9 Radio
-module.ExtraShortcuts.Latehome.desc=Latehome Radio
-module.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
+ExtraShortcuts.ManageCHPP.desc=Saite uz CHPP uzstādījumu lapu
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Saite uz FoxTrick uzstādījumu lapu
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 #CopyMatchID
-module.CopyYouth.TrainingReport.desc=Treniņu ziņojums
-module.CopyYouth.ScoutComment.desc=Skauta komentārs
-module.LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
-module.LeagueNewsFilter.lineupChanges.desc=Rādīt tikai izkārtojuma izmaiņas
+foxtrick.CopyYouth.TrainingReport.desc=Treniņu ziņojums
+foxtrick.CopyYouth.ScoutComment.desc=Skauta komentārs
+LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
+LeagueNewsFilter.lineupChanges.desc=Rādīt tikai izkārtojuma izmaiņas
 #MoveManagerOnline
-module.TeamPopupLinks.Matches.desc=Spēles
-module.TeamPopupLinks.Players.desc=Spēlētāji
-module.TeamPopupLinks.last_5_ips.desc=Pēdējās 5 aktivitātes
-module.TeamPopupLinks.Guestbook.desc=Viesu grāmata
-module.TeamPopupLinks.SendMessage.desc=Nosūtīt ziņu
-module.TeamPopupLinks.Achievements.desc=Sasniegumi
-module.TeamPopupLinks.TransferHistory.desc=Darījumu vēsture
-module.TeamPopupLinks.TeamHistory.desc=Kluba vēsture
-module.TeamPopupLinks.LastLineup.desc=Pēdējais izkārtojums
-module.TeamPopupLinks.NextMatch.desc=Nākamā spēle
-module.TeamPopupLinks.AddNextMatch.desc=Pievienot nākamo spēli HT Live
-module.TeamPopupLinks.YouthMatches.desc=Jauniešu spēles
-module.TeamPopupLinks.Coach.desc=Treneris
-module.SkillColoring.skill_color.desc=Iekrāsot prasmes
+foxtrick.TeamPopupLinks.Matches.desc=Spēles
+foxtrick.TeamPopupLinks.Players.desc=Spēlētāji
+foxtrick.TeamPopupLinks.last_5_ips.desc=Pēdējās 5 aktivitātes
+foxtrick.TeamPopupLinks.Guestbook.desc=Viesu grāmata
+foxtrick.TeamPopupLinks.SendMessage.desc=Nosūtīt ziņu
+foxtrick.TeamPopupLinks.Achievements.desc=Sasniegumi
+foxtrick.TeamPopupLinks.TransferHistory.desc=Darījumu vēsture
+foxtrick.TeamPopupLinks.TeamHistory.desc=Kluba vēsture
+foxtrick.TeamPopupLinks.LastLineup.desc=Pēdējais izkārtojums
+foxtrick.TeamPopupLinks.NextMatch.desc=Nākamā spēle
+foxtrick.TeamPopupLinks.AddNextMatch.desc=Pievienot nākamo spēli HT Live
+foxtrick.TeamPopupLinks.YouthMatches.desc=Jauniešu spēles
+foxtrick.TeamPopupLinks.Coach.desc=Treneris
+foxtrick.SkillColoring.skill_color.desc=Iekrāsot prasmes
 #YouthSkillHideUnknown
-module.YouthSkillHideUnknown.HideUnknown.desc=Slēpt nezināmās spēlētāju prasmes
-module.SkillTable.desc=Rādīt spēlētāju prasmes tabulā.
-module.SkillTable.ColouredYouth.desc=Attēlot iekrāsotas jauniešu prasmes
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Slēpt nezināmās spēlētāju prasmes
+foxtrick.SkillTable.desc=Rādīt spēlētāju prasmes tabulā.
+foxtrick.SkillTable.ColouredYouth.desc=Attēlot iekrāsotas jauniešu prasmes
 #HighlightCupwins
 #CountryList
-module.ShowLineupSet.LineupSet.desc=Izcelt komandas, kas uzstādījušas spēles rīkojumus
-module.ShowLineupSet.Ownerless.desc=Izcelt bezīpašnieka komandas
-module.ShowLineupSet.Winning.desc=Izcelt uzvarētāju komandas
-module.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
+foxtrick.ShowLineupSet.LineupSet.desc=Izcelt komandas, kas uzstādījušas spēles rīkojumus
+foxtrick.ShowLineupSet.Ownerless.desc=Izcelt bezīpašnieka komandas
+foxtrick.ShowLineupSet.Winning.desc=Izcelt uzvarētāju komandas
+foxtrick.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
 
 # -----------------------------------------------------------------------------
 
@@ -167,18 +167,18 @@ AddLeaveConfButton.LeaveForum=Atstāt diskusiju telpu
 ShowForumPrefButton.forumPreferences=Diskusiju uzstādījumi
 
 # ForumTemplates
-ForumTemplates.make=Izveidot veidni no ziņojuma
-ForumTemplates.show=Rādīt veidnes
-ForumTemplates.hide=Slēpt veidnes
-ForumTemplates.make.error=Veidne jau eksistē vai ir tukša
-ForumTemplates.templateTitle=Veidnes nosaukums\:
-ForumTemplates.templateTitle.error='[' un ']' nav atļauti virsrakstos
-ForumTemplates.delete.ask=Dzēst veidni?
+make_template_from_post=Izveidot veidni no ziņojuma
+show_templates=Rādīt veidnes
+hide_templates=Slēpt veidnes
+template_exists=Veidne jau eksistē vai ir tukša
+template_title=Veidnes nosaukums\:
+template_title_illegal='[' un ']' nav atļauti virsrakstos
+delete_template_ask=Dzēst veidni?
 
 #PostPreview
-ForumPreview.preview.title=Parādīt ziņas priekšskatījumu
-ForumPreview.preview=Priekšskatīt
-ForumPreview.send=Nosūtīt
+show_preview_from_post=Parādīt ziņas priekšskatījumu
+preview=Priekšskatīt
+forumPreview.send=Nosūtīt
 
 
 
@@ -198,8 +198,8 @@ TransferSearchFilters.deleteFilter.ask=Vai tiešām vēlaties izdzēst šo filtr
 TransferSearchFilters.saveFilter=Saglabāt jaunu filtru
 
 #Filter
-Filters.label=Filtri
-Filters.ok=Labi
+Filters=Filtri
+Filters.filter=Labi
 Filters.clear=Notīrīt
 Filters.noFilter=Nav filtru
 Filters.none=Neviens
@@ -214,13 +214,13 @@ Filters.stars=Zvaigznes
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
-datetimestrings.days=dienas
-datetimestrings.hours=st.
-datetimestrings.minutes=min
+foxtrick.datetimestrings.days=dienas
+foxtrick.datetimestrings.hours=st.
+foxtrick.datetimestrings.minutes=min
 
 #Transfer prices
-MedianTransferPrice.median=Vidējā cena
-MedianTransferPrice.average=Vidējā cena
+transfercompare_medianprice=Vidējā cena
+transfercompare_avgprice=Vidējā cena
 
 match.type.league=Līgas spēle
 match.type.qualification=Kvalifikācijas spēle
@@ -311,7 +311,7 @@ match.role.captain.abbr=Kapt.
 
 match.player.unknown=Nezināms spēlētājs
 
-TeamStats.General=Vispārīgi
+General=Vispārīgi
 
 PlayerNumber=Spēlētāja numurs
 PlayerNumber.abbr=Nr
@@ -419,50 +419,50 @@ match.ratings.rightshort=L
 match.ratings.centershort=C
 match.ratings.leftshort=K
 match.ratings.ifkshort=N
-ConfirmActions.bid=Vēlies solīt %s par šo spēlētāju?
-ConfirmActions.transferlist=Vēlaties pārdot šo spēlētāju? Sākumcena ir %s.
-ConfirmActions.hirestaff=Tiks nolīgti %num %kind, turpināt?
-ConfirmActions.sackstaff=%num %kind tiks atlaisti, turpināt?
-ConfirmActions.ntremove=Tiešām vēlies pievienot/atlaist šo spēlētāju?
-ForumStripHattrickLinks.ask=Vai vēlies dzēst Hattrick serveri no saites, lai tā būtu lietojama diskusijās?
-HideSignatures.signaturetoggle=Paraksts
-MarkUnread.markunread=Atzīmēt kā nelasītu sākot no šejienes
-TeamSelectBox.selectplayer=Atlasīt spēlētāju
-links.custom.selecticon=Izvēlēties ikonu
-links.custom.addpersonallink=Pievienot personisku saiti
-links.custom.addlink=Pievienot saiti
-links.custom.remove=Dzēst
-links.custom.copy=Kopēt
-links.custom.export=Eksportēt
-links.custom.confirmremove=Vai tiešām dzēst?
-links.custom.addtag=Pievienot birku
-links.custom.tags=Birkas
-links.custom.help=Palīdzība
+foxtrick.bidconfirmation=Vēlies solīt %s par šo spēlētāju?
+foxtrick.tlconfirmation=Vēlaties pārdot šo spēlētāju? Sākumcena ir %s.
+foxtrick.staffconfirmationhire=Tiks nolīgti %num %kind, turpināt?
+foxtrick.staffconfirmationsack=%num %kind tiks atlaisti, turpināt?
+foxtrick.ntremoveconfirmation=Tiešām vēlies pievienot/atlaist šo spēlētāju?
+foxtrick.confirmstripserver=Vai vēlies dzēst Hattrick serveri no saites, lai tā būtu lietojama diskusijās?
+foxtrick.conferences.signaturetoggle=Paraksts
+foxtrick.conferences.markunread=Atzīmēt kā nelasītu sākot no šejienes
+copy.selectplayer=Atlasīt spēlētāju
+foxtrick.linkscustom.selecticon=Izvēlēties ikonu
+foxtrick.linkscustom.addpersonallink=Pievienot personisku saiti
+foxtrick.linkscustom.addlink=Pievienot saiti
+foxtrick.linkscustom.remove=Dzēst
+foxtrick.linkscustom.copy=Kopēt
+foxtrick.linkscustom.export=Eksportēt
+foxtrick.linkscustom.confirmremove=Vai tiešām dzēst?
+foxtrick.linkscustom.addtag=Pievienot birku
+foxtrick.linkscustom.tags=Birkas
+foxtrick.linkscustom.help=Palīdzība
 matches.income=Ienākumi\:
-PlayerBirthday.boxheader=Dzimšanas dienas
-PlayerBirthday.BirthdayToday=Dzimšanas dienas šodien
-PlayerBirthday.BirthdayLastWeek=Dzimšanas dienas pagājušajā nedēļā
-PlayerBirthday.BirthdayNextWeek=Dzimšanas dienas nākamajā nedēļā
-copy.matchid=Klikšķiniet, lai kopētu matchID starpliktuvē
-ExtendedPlayerDetails.perseason=/sezonā
+copy.Birthdays=Dzimšanas dienas
+copy.BirthdayToday=Dzimšanas dienas šodien
+copy.BirthdayLastWeek=Dzimšanas dienas pagājušajā nedēļā
+copy.BirthdayNextWeek=Dzimšanas dienas nākamajā nedēļā
+foxtrick.copymatchid=Klikšķiniet, lai kopētu matchID starpliktuvē
+foxtrick.ExtendedPlayerDetails.perseason=/sezonā
 
-ExtraPlayerInfo.defensiveTrainer=%s treneris, kurš ir aizsardzības futbola piekritējs.
-ExtraPlayerInfo.offensiveTrainer=%s treneris, kurš ir uzbrūkoša futbola piekritējs.
-ExtraPlayerInfo.balancedTrainer=%s treneris, kas nav ne uzbrukuma, ne aizsardzības piekritējs.
+foxtrick.defensiveTrainer=%s treneris, kurš ir aizsardzības futbola piekritējs.
+foxtrick.offensiveTrainer=%s treneris, kurš ir uzbrūkoša futbola piekritējs.
+foxtrick.balancedTrainer=%s treneris, kas nav ne uzbrukuma, ne aizsardzības piekritējs.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
-matchView.htLive=HT Live
+htLive=HT Live
 
-module.modules_allpages=Moduļi, kas darbojas visās lapās
-ReadHtPrefs.HTLanguageChanged=FoxTrick ir konstatējis valodas maiņu. FoxTrick valoda ir mainīta uz %s.
+foxtrick.modules_allpages=Moduļi, kas darbojas visās lapās
+HTLanguageChanged=FoxTrick ir konstatējis valodas maiņu. FoxTrick valoda ir mainīta uz %s.
 
 Coach=Treneris
 CurrentSquad=Pašreizējā komanda
 
 
-ManagerButtons.writeInGuestbook=Rakstīt viesu grāmatā
+managerButtons.writeInGuestbook=Rakstīt viesu grāmatā
 copy.copyplayerad=Kopēt spēlētāja reklāmu
 copy.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
 
@@ -581,17 +581,17 @@ TransferSearchResultFilters.hideSuspended=Slēpt diskvalificētos
 TransferSearchResultFilters.days=Dienas\:
 
 # refer to transfer search form
-Filters.minimum=Vismaz
-Filters.maximum=Maksimālais
+minimum=Vismaz
+maximum=Maksimālais
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-RapidId.view=Apskatīt
-RapidId.viewById=Atrast pēc ID
-RapidId.senior=Pieaugušo
-RapidId.youth=Jaunieši
+rapidId.view=Apskatīt
+rapidId.viewById=Atrast pēc ID
+rapidId.senior=Pieaugušo
+rapidId.youth=Jaunieši
 
 # SkillTable
-Switch_view.title=Mainīt tabulas skatu.
+skillTable.switchView=Mainīt tabulas skatu.
 skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
 Nationality=Tautība
 Nationality.abbr=Nac.
