--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -16,95 +16,95 @@ direction=ltr
 pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
-# WARNING: your module description has to have the name module.MODULE_NAME.desc
-module.LineupShortcut.desc=Legg til en snarvei til lagoppstillingen på spillerens kamp historie
-module.SmallerPages.desc=Reduserer dimensjonen av noen sider til å tilpasse seg til små skjermer
-module.ForumTemplates.desc=Tillat omgjøring fra forumpost til mal for senere bruk
-module.ForumPreview.desc=Tillat å vise en forhåndsvisning av en post (Fungerer også for HT-mail)
-module.AddLeaveConfButton.desc=Legg til en "Forlat forum" knapp i hver forummappe
-module.StarsCounter.desc=Legg det totale antallet stjerner til i lagoppstillingssiden
-module.MoveLinks.desc=Flytt managerens liga og flagglenker til meldingsetiketten. Merk\: "Vis avatar" funksjonen på Hattrick må være slått på for at dette skal fungere\!
+# WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
+foxtrick.LineupShortcut.desc=Legg til en snarvei til lagoppstillingen på spillerens kamp historie
+foxtrick.SmallerPages.desc=Reduserer dimensjonen av noen sider til å tilpasse seg til små skjermer
+foxtrick.ForumTemplates.desc=Tillat omgjøring fra forumpost til mal for senere bruk
+foxtrick.ForumPreview.desc=Tillat å vise en forhåndsvisning av en post (Fungerer også for HT-mail)
+foxtrick.AddLeaveConfButton.desc=Legg til en "Forlat forum" knapp i hver forummappe
+foxtrick.StarsCounter.desc=Legg det totale antallet stjerner til i lagoppstillingssiden
+foxtrick.MoveLinks.desc=Flytt managerens liga og flagglenker til meldingsetiketten. Merk\: "Vis avatar" funksjonen på Hattrick må være slått på for at dette skal fungere\!
 #AttVsDef
-module.AttVsDef.desc=Legg en angrep/forsvars sammenligning til kampsiden
-module.AttVsDef.oldstyle.desc=gammel stil
-module.AttVsDef.newstyle.desc=ny stil
-module.AttVsDef.oldstyleifkseparated.desc=gammel stil (separat ind. dødballsituasjoner)
+foxtrick.AttVsDef.desc=Legg en angrep/forsvars sammenligning til kampsiden
+foxtrick.AttVsDef.oldstyle.desc=gammel stil
+foxtrick.AttVsDef.newstyle.desc=ny stil
+foxtrick.AttVsDef.oldstyleifkseparated.desc=gammel stil (separat ind. dødballsituasjoner)
 #Ratings
-module.Ratings.desc=Legg til ratinger på kampsiden
-module.Ratings.HideAverages.desc=Skjul gjennomsnittlige karakterer
-module.Ratings.HatStats.desc=HatStats
-module.Ratings.HatStatsDetailed.desc=HatStats (detaljert)
-module.Ratings.HatStatsSeparated.desc=HatStats separat per karakter
-module.Ratings.LoddarStats.desc=LoddarStats
-module.Ratings.PeasoStats.desc=PeasoStats
-module.Ratings.VnukStats.desc=VnukStats
-module.Ratings.HTitaVal.desc=HTitaVal
-module.Ratings.GardierStats.desc=GardierStats
-module.BookmarkAdjust.desc=Endre ikonet knyttet til et bokmerke ved å sette inn den tilsvarende koden i bokmerkekommentaren i klammer\: f.eks [cyan] viser cyan ikonet. Mulige verdier\: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
+foxtrick.Ratings.desc=Legg til ratinger på kampsiden
+foxtrick.Ratings.HideAverages.desc=Skjul gjennomsnittlige karakterer
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaljert)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats separat per karakter
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
+foxtrick.BookmarkAdjust.desc=Endre ikonet knyttet til et bokmerke ved å sette inn den tilsvarende koden i bokmerkekommentaren i klammer\: f.eks [cyan] viser cyan ikonet. Mulige verdier\: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 #MedianTransferPrice
-module.MedianTransferPrice.desc=Vis en median overgangssum i sammenlign overganger
-module.FlagCollectionToMap.desc=Vis et verdenskart med alle landene som du har samlet flaggene til i hver kategori
-module.TransferSearchFilters.desc=Tillat maler for overgangssøk
-module.TransferSearchResultFilters.desc=Ytterligere filtre for filtrering på søkeresultater
-module.TransferDeadline.desc=Legg til en ekstra linje på hvert søkeresultat i overgangsmarkedet med dager, timer og minutter til budfristen er over
-module.HTDateFormat.desc=Legg til den globale HT-uken og sesongen til de viktigste datoene på HT-siden
-module.HTDateFormat.LocalSeason.desc=Vis den lokale sesongen istedet for den globale sesongen
-module.TeamPopupLinks.desc=Vis et lite pop-up vindu med hurtiglenker når du sveiper over en lag-id-link
-module.StaffMarker.desc=Merk de overordnedes nick på forumene. I tekstboksene kan du velge ditt egne tekstformat (HTML tekstformat kjennetegn)  (HTML style attribute).
+foxtrick.MedianTransferPrice.desc=Vis en median overgangssum i sammenlign overganger
+foxtrick.FlagCollectionToMap.desc=Vis et verdenskart med alle landene som du har samlet flaggene til i hver kategori
+foxtrick.TransferSearchFilters.desc=Tillat maler for overgangssøk
+foxtrick.TransferSearchResultFilters.desc=Ytterligere filtre for filtrering på søkeresultater
+foxtrick.TransferDeadline.desc=Legg til en ekstra linje på hvert søkeresultat i overgangsmarkedet med dager, timer og minutter til budfristen er over
+foxtrick.HTDateFormat.desc=Legg til den globale HT-uken og sesongen til de viktigste datoene på HT-siden
+foxtrick.HTDateFormat.LocalSeason.desc=Vis den lokale sesongen istedet for den globale sesongen
+foxtrick.TeamPopupLinks.desc=Vis et lite pop-up vindu med hurtiglenker når du sveiper over en lag-id-link
+foxtrick.StaffMarker.desc=Merk de overordnedes nick på forumene. I tekstboksene kan du velge ditt egne tekstformat (HTML tekstformat kjennetegn)  (HTML style attribute).
 #ForumYouthIcons
-module.ForumYouthIcons.desc=Vis en lenkebar for ungdomslaget (Fungerer også fot mail)
+foxtrick.ForumYouthIcons.desc=Vis en lenkebar for ungdomslaget (Fungerer også fot mail)
 #FormatPostingText
 #EmbedMedia
 #Forum direct page links
 #
-module.CopyPostID.desc=PostId forandringer
-module.ShowForumPrefButton.desc=Vis snarvei til foruminnstillinger på alle forumsider module.AlltidFlags.desc\=Legger til Alltid-flagg and lenker til begge postere på forumsiden
-module.LinksLeague.desc=Legger til noen lenker til ligasiden
-module.LinksTeam.desc=Legger til noen lenker til  lagsiden
-module.LinksCountry.desc=Legger til noen lenker til landsiden
-module.LinksChallenges.desc=Legger til noen lenker til utfordringessiden
-module.LinksEconomy.desc=Legger til noen lenker til økonomisiden
-module.LinksYouthOverview.desc=Legger til noen lenker til oversiktsiden
-module.LinksArena.desc=Legger til noen lenker til stadionsiden
-module.LinksCoach.desc=Legger til noen lenker til  ny trenersiden
-module.LinksPlayerDetail.desc=Legger til noen lenker til spillerdetaljsiden
-module.LinksMatch.desc=Legger til noen lenker til  kampsiden
-module.LinksTraining.desc=Legger til noen lenker til treningssiden
-module.LinksAlliances.desc=Legger til noen lenker til alliansesiden
-module.LinksNational.desc=Legger til noen lenker til  landslagssiden
-module.LinksFans.desc=Legger til noen lenker til  supportersiden
-module.LinksPlayers.desc=Legger til noen lenker til  spillersiden
-module.LinksManager.desc=Legger til noen lenker til  managersiden
-module.LinksAchievements.desc=Legger til noen lenker til prestasjonssiden
-module.LinksStaff.desc=Legger til noen lenker til   ansattsiden
-module.ForumAlterHeaderLine.desc=Forandrer posting header
+foxtrick.CopyPostID.desc=PostId forandringer
+foxtrick.ShowForumPrefButton.desc=Vis snarvei til foruminnstillinger på alle forumsider foxtrick.AlltidFlags.desc\=Legger til Alltid-flagg and lenker til begge postere på forumsiden
+foxtrick.LinksLeague.desc=Legger til noen lenker til ligasiden
+foxtrick.LinksTeam.desc=Legger til noen lenker til  lagsiden
+foxtrick.LinksCountry.desc=Legger til noen lenker til landsiden
+foxtrick.LinksChallenges.desc=Legger til noen lenker til utfordringessiden
+foxtrick.LinksEconomy.desc=Legger til noen lenker til økonomisiden
+foxtrick.LinksYouthOverview.desc=Legger til noen lenker til oversiktsiden
+foxtrick.LinksArena.desc=Legger til noen lenker til stadionsiden
+foxtrick.LinksCoach.desc=Legger til noen lenker til  ny trenersiden
+foxtrick.LinksPlayerDetail.desc=Legger til noen lenker til spillerdetaljsiden
+foxtrick.LinksMatch.desc=Legger til noen lenker til  kampsiden
+foxtrick.LinksTraining.desc=Legger til noen lenker til treningssiden
+foxtrick.LinksAlliances.desc=Legger til noen lenker til alliansesiden
+foxtrick.LinksNational.desc=Legger til noen lenker til  landslagssiden
+foxtrick.LinksFans.desc=Legger til noen lenker til  supportersiden
+foxtrick.LinksPlayers.desc=Legger til noen lenker til  spillersiden
+foxtrick.LinksManager.desc=Legger til noen lenker til  managersiden
+foxtrick.LinksAchievements.desc=Legger til noen lenker til prestasjonssiden
+foxtrick.LinksStaff.desc=Legger til noen lenker til   ansattsiden
+foxtrick.ForumAlterHeaderLine.desc=Forandrer posting header
 # please translate next lines again if needed
 #ExtendedPlayerDetails
-module.ExtendedPlayerDetails.SWD.desc=Vis kontraktvarighet som sesonger – uker – dager
-module.ExtendedPlayerDetails.SW.desc=Vis kontraktvarighet som sesonger – uker
-module.ExtendedPlayerDetails.SD.desc=Vis kontraktvarighet som sesonger – dager
-module.ExtendedPlayerDetails.WD.desc=Vis kontraktvarighet som uker – dager
-module.ExtendedPlayerDetails.D.desc=Vis kontraktvarighet som dager
+foxtrick.ExtendedPlayerDetails.SWD.desc=Vis kontraktvarighet som sesonger – uker – dager
+foxtrick.ExtendedPlayerDetails.SW.desc=Vis kontraktvarighet som sesonger – uker
+foxtrick.ExtendedPlayerDetails.SD.desc=Vis kontraktvarighet som sesonger – dager
+foxtrick.ExtendedPlayerDetails.WD.desc=Vis kontraktvarighet som uker – dager
+foxtrick.ExtendedPlayerDetails.D.desc=Vis kontraktvarighet som dager
 #ExtraShortcuts
 #CopyMatchID
-module.HeaderFix.desc=Ordner overskriften mens du scroller
+foxtrick.HeaderFix.desc=Ordner overskriften mens du scroller
 #MoveManagerOnline
-module.TeamPopupLinks.Team.desc=Lenke til Laget (kun for managerlenker)
-module.TeamPopupLinks.Matches.desc=Lenke til siste kamper
-module.TeamPopupLinks.Players.desc=Lenke til spillersiden
-module.TeamPopupLinks.last_5_ips.desc=Lenke til siste 5 innlogginger
-module.TeamPopupLinks.Guestbook.desc=Lenke til gjestebok
-module.TeamPopupLinks.SendMessage.desc=Lenke til Send melding
-module.TeamPopupLinks.Challenge.desc=Lenke til Utfordre
-module.TeamPopupLinks.Achievements.desc=Lenke til Prestasjoner
-module.TeamPopupLinks.TransferHistory.desc=Lenke til overganger
-module.TeamPopupLinks.LastLineup.desc=Lenke til siste lagoppstilling
-module.TeamPopupLinks.Coach.desc=Lenke til treneren
-module.SkillColoring.desc=Bedre visualisering av skillsene
-module.SkillColoring.skill_color.desc=Farger skillsene
-module.SkillColoring.only_skill_color.desc=Farger kun skills og ikke personlighet og supporterhumør osv.
-module.SkillColoring.skill_number.desc=Vis skills også som nummer for eksempel god (7)
-module.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.eks. God (7)
+foxtrick.TeamPopupLinks.Team.desc=Lenke til Laget (kun for managerlenker)
+foxtrick.TeamPopupLinks.Matches.desc=Lenke til siste kamper
+foxtrick.TeamPopupLinks.Players.desc=Lenke til spillersiden
+foxtrick.TeamPopupLinks.last_5_ips.desc=Lenke til siste 5 innlogginger
+foxtrick.TeamPopupLinks.Guestbook.desc=Lenke til gjestebok
+foxtrick.TeamPopupLinks.SendMessage.desc=Lenke til Send melding
+foxtrick.TeamPopupLinks.Challenge.desc=Lenke til Utfordre
+foxtrick.TeamPopupLinks.Achievements.desc=Lenke til Prestasjoner
+foxtrick.TeamPopupLinks.TransferHistory.desc=Lenke til overganger
+foxtrick.TeamPopupLinks.LastLineup.desc=Lenke til siste lagoppstilling
+foxtrick.TeamPopupLinks.Coach.desc=Lenke til treneren
+foxtrick.SkillColoring.desc=Bedre visualisering av skillsene
+foxtrick.SkillColoring.skill_color.desc=Farger skillsene
+foxtrick.SkillColoring.only_skill_color.desc=Farger kun skills og ikke personlighet og supporterhumør osv.
+foxtrick.SkillColoring.skill_number.desc=Vis skills også som nummer for eksempel god (7)
+foxtrick.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.eks. God (7)
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
@@ -148,16 +148,16 @@ AddLeaveConfButton.LeaveForum=forlat liga
 #ShowForumPrefButton
 
 # ForumTemplates
-ForumTemplates.make=Lag mal av post
-ForumTemplates.make.error=Det finnes allerede en mal, eller så er den er tom
-ForumTemplates.delete.ask=Slett mal?
+make_template_from_post=Lag mal av post
+template_exists=Det finnes allerede en mal, eller så er den er tom
+delete_template_ask=Slett mal?
 
 #PostPreview
-ForumPreview.preview.title=Forhåndsvis posten
+show_preview_from_post=Forhåndsvis posten
 
 
-ForumYouthIcons.toolbar.youth=Juniorlenker
-ForumYouthIcons.toolbar.main=Hovedlenker
+ForumYouthIcons.label=Juniorlenker
+ForumYouthIcons.labelToolbar=Hovedlenker
 ForumYouthIcons.youthplayerid=link til juniorspiller
 ForumYouthIcons.youthteamid=link til ungdomslag
 ForumYouthIcons.youthmatchid=legg til link til juniorkamp
@@ -182,16 +182,16 @@ TransferSearchFilters.saveFilter=Lagre nytt filter
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
-datetimestrings.days=dager
-datetimestrings.hours=t
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=u
-datetimestrings.short_days=d
+foxtrick.datetimestrings.days=dager
+foxtrick.datetimestrings.hours=t
+foxtrick.datetimestrings.minutes=m
+foxtrick.datetimestrings.short_seasons=s
+foxtrick.datetimestrings.short_weeks=u
+foxtrick.datetimestrings.short_days=d
 
 #Transfer prices
-MedianTransferPrice.median=Medianpris
-MedianTransferPrice.average=Gjennomsnittspris
+transfercompare_medianprice=Medianpris
+transfercompare_avgprice=Gjennomsnittspris
 
 
 
@@ -244,18 +244,18 @@ match.ratings.rightshort=H
 match.ratings.centershort=M
 match.ratings.leftshort=V
 match.ratings.ifkshort=I
-ConfirmActions.bid=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
-ConfirmActions.transferlist=Er du sikker på at du vil selge denne spilleren? Prisen er satt til %s.
-TeamSelectBox.selectplayer=Velg spiller
-links.custom.selecticon=Velg ikon
-links.custom.addpersonallink=Legg til personlig link
-links.custom.addlink=Legg til link
-links.custom.remove=Fjern
-links.custom.copy=Kopier
-links.custom.confirmremove=Vil du virkelig fjerne?
-links.custom.addtag=Legg til en tagg
-links.custom.tags=Tagger
-links.custom.help=Hjelp
+foxtrick.bidconfirmation=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
+foxtrick.tlconfirmation=Er du sikker på at du vil selge denne spilleren? Prisen er satt til %s.
+copy.selectplayer=Velg spiller
+foxtrick.linkscustom.selecticon=Velg ikon
+foxtrick.linkscustom.addpersonallink=Legg til personlig link
+foxtrick.linkscustom.addlink=Legg til link
+foxtrick.linkscustom.remove=Fjern
+foxtrick.linkscustom.copy=Kopier
+foxtrick.linkscustom.confirmremove=Vil du virkelig fjerne?
+foxtrick.linkscustom.addtag=Legg til en tagg
+foxtrick.linkscustom.tags=Tagger
+foxtrick.linkscustom.help=Hjelp
 
 
 #following string uses pluralForms
@@ -266,7 +266,7 @@ links.custom.help=Hjelp
 Coach=Trener
 
 
-ManagerButtons.writeInGuestbook=Skriv i gjestebok
+managerButtons.writeInGuestbook=Skriv i gjestebok
 copy.copyplayerad=Kopier spillerannonse til utklippstavlen
 copy.copied=Spilleren har blitt kopiert til utklippstavlen.
 
@@ -328,7 +328,7 @@ showTimeInClub=Vis tid i klubben
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-RapidId.view=Vis
+rapidId.view=Vis
 
 # SkillTable
 
