--- a/content/locale/eu/foxtrick.properties
+++ b/content/locale/eu/foxtrick.properties
@@ -15,7 +15,7 @@
 pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
-# WARNING: your module description has to have the name module.MODULE_NAME.desc
+# WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 #AttVsDef
 #Ratings
 #MedianTransferPrice
